2017-02-08 belangeo <belangeo@gmail.com>

    * Added setGlobalDur, setGlobalDel, getGlobalDur and getGlobalDel methods
      to the Server object. These methods allow the user to manage starttime
      and duration of audio objects globally.

2017-02-09 belangeo <belangeo@gmail.com>

    * Added shape argument to PVAmpMod and PVFreqMod objects. 
      It allows to change the modulation oscillator's waveform.

2017-02-08 belangeo <belangeo@gmail.com>

    * Added onlyonce argument to Beat object.

2017-02-08 belangeo <belangeo@gmail.com>

    * Seq now accepts floating-point values as time units.

2017-02-07 belangeo <belangeo@gmail.com>

    * Added maxwindow argument to TableWrite. This is the maximum number of samples
      over which the object is allowed to interpolate. Useful to avoid interpolation
      over the entire table when using a circular writing pointer.

2017-02-05 belangeo <belangeo@gmail.com>

    * Added new object: TableFill, continuously fills a table with incoming samples.

2017-02-04 belangeo <belangeo@gmail.com>

    * Added onlyonce argument to Seq object.

2017-01-30 belangeo <belangeo@gmail.com>

    * Added new object: Particle2, An even more full control granular synthesis generator.

2017-01-08 belangeo <belangeo@gmail.com>

    * Added new object: SharedTable, an inter-process shared memory table.

2017-01-07 belangeo <belangeo@gmail.com>

    * Jack ports activation and auto-connection now happen in the boot process.

2016-12-17 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.2.

2016-12-17 belangeo <belangeo@gmail.com>

    * Fixed bug in Bendin value. Fixed midi input events handling. Set 
      interpolation to off by default for midi continuous controllers.

2016-12-17 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed a bug in the documentation window.

2016-12-17 belangeo <belangeo@gmail.com>

    * TrigFunc and Pattern now accept tuple as arg argument (fixed issue #90).
